--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/common": "^8.2.0",
+    "@nestjs/core": "^8.2.0",
+    "@nestjs/platform-express": "^8.2.0",
+    "@nestjs/typeorm": "^8.0.2",
     "module-alias": "^2.2.2",
     "nodemon": "^2.0.14",
+    "pg": "^8.7.1",
+    "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^7.4.0",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
+    "@nestjs/cli": "^8.1.4",
     "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/testing": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
@@ -41,10 +45,10 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
+    "jest": "^27.3.1",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
